# FamiLator

./: .flake8  .gitignore  README.md  Taskfile.yml  pyproject.toml  requirements-dev.txt  requirements.txt
configs/: default.yaml  tennis.yaml  test.yaml  zelda.yaml
output/: .gitkeep
roms_input/: PUT_YOUR_ROMS_HERE  test.nes
scripts/: run_pipeline.py  run_web.py
src/: __init__.py  chr_analyzer.py  cli.py  detector.py  encoding.py  extractor.py  font_checker.py  language_detector.py  pipeline.py  pointer_utils.py  project.py  reinjector.py  table_builder.py  translator.py  translator_stub.py  validator.py
src/web/: __init__.py  app.py  routes.py
src/web/templates/: analyze.html  translate.html
tables/: common.tbl  tennis.tbl
tests/: test_chr_analyzer.py  test_encoding.py  test_extractor.py  test_font_checker.py  test_language_detector.py  test_reinjector.py  test_table.tbl  test_table_builder.py  test_translator.py  test_web.py
web/: app.py  routes.py
web/templates/: analyze.html  base.html  index.html  new_project.html  projects.html  table_builder.html  tiles.html  upload.html
