[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "familator"
version = "0.1.0"
description = "NES/Famicom ROM Automated Text Extraction, Translation & Reinjection"
authors = [{name = "Matt-Retrogamer", email = "matt@retrogamer.dev"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers", 
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Games/Entertainment",
    "Topic :: Software Development :: Localization",
    "Topic :: System :: Emulators",
]
keywords = ["nes", "famicom", "rom", "translation", "retro", "gaming", "ai", "llm"]

dependencies = [
    "PyYAML>=6.0.1",
    "requests>=2.31.0",
    "Flask>=3.0.0",
    "Werkzeug>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0", 
    "black>=23.7.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
    "isort>=5.12.0",
]
enhanced = [
    "numpy>=1.24.0",
    "Pillow>=10.0.0",
]

[project.scripts]
familator = "src.cli:main"

[project.urls]
Homepage = "https://github.com/Matt-Retrogamer/FamiLator"
Repository = "https://github.com/Matt-Retrogamer/FamiLator"
Documentation = "https://github.com/Matt-Retrogamer/FamiLator/blob/main/README.md"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = ["yaml.*", "requests.*"] 
ignore_missing_imports = true

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["src", "familator"]

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503", "F401", "F841", "E722"]
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "build",
    "dist",
    "*.egg-info",
]
